--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ h1 {
 }
 
 .container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .scoreboard {
@@ -37,13 +38,20 @@ h1 {
     align-items: center;
 }
 
-.result {
-    color: green;
+.actions {
+    display: flex;
+    gap: 32px;
 }
 
-#startBtn {
+.actions > button {
+    font-size: 32px;
     padding: 8px;
     width: 200px;
+    height: 64px;
     background-color: brown;
     color: bisque;
+}
+
+.result {
+    color: green;
 }
